[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
